--- a/index.html
+++ b/index.html
@@ -16,7 +16,24 @@
 </head>
 <body>
 
-    
+    <header>
+        <h2>Head.</h2>
+        <ul>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <section>
+            <h1>Patagonia</h1>
+            <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p>
+            <img src="images/Image.svg">
+        </section>
+    </main>
+
+
     
 </body>
 </html>
