--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 
-    <header>
-        <h2>Head.</h2>
-        <ul>
+    <header class="header">
+        <h2 class="header__logo">Head.</h2>
+        <ul class="header__links">
             <li><a href="#">Works</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Contacts</a></li>
@@ -26,14 +26,12 @@
     </header>
 
     <main>
-        <section>
-            <h1>Patagonia</h1>
-            <p>Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p>
-            <img src="images/Image.svg">
+        <section class="main">
+            <h1 class="main__header">Patagonia</h1>
+            <p class="main__text">Fusce vehicula dolor arcu, sit amet blandit dolor mollis nec. Donec viverra eleifend lacus, vitae ullamcor.</p>
+            <img src="images/Image.svg" class="main__image" alt="horses on a field">
         </section>
     </main>
-
-
     
 </body>
 </html>
