Toggle added -mobile
Toggle added and navbar hidden when resizing to 320px

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             <li><a href="#">Services</a></li>
             <li><a href="#">Contacts</a></li>
         </ul>
+
+        <a href="#" class="toggle">
+            <p><i class="fa-solid fa-ellipsis"></i></p>
+        </a>
     </header>
 
     <main>
