Fixed responsive widths

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
 
-    <header class="header">
+    <header>
+        <div class="header">
         <h2 class="header__logo">Head.</h2>
         <ul class="header__links">
             <li><a href="#">Works</a></li>
@@ -27,6 +28,7 @@
         <a href="#" class="toggle">
             <p><i class="fa-solid fa-ellipsis"></i></p>
         </a>
+    </div>
     </header>
 
     <main>
